Wrote first draft.

--- a/quillen_model_structures.bib
+++ b/quillen_model_structures.bib
@@ -1,6 +1,18 @@
 % This file was created with JabRef 2.6.
 % Encoding: Cp1252
 
+@MISC{commutative_algebra,
+  author = {Allen Altman and Steven Kleiman},
+  title = {A Term of Commutative Algebra},
+  howpublished = {\url{http://web.mit.edu/18.705/www/11Nts.pdf}},
+  month = {February},
+  year = {2012},
+  file = {A Term of Commutative Algebra:D\:\\Documents\\Dropbox\\MIT\\2011-2012\\18.904 - Seminar in Topology\\Quillen Model Structures\\A Term of Commutative Algebra.pdf:PDF},
+  owner = {Jason Gross},
+  timestamp = {2012.04.01},
+  url = {http://web.mit.edu/18.705/www/11Nts.pdf}
+}
+
 @INBOOK{dwyer1995homotopy,
   chapter = {Homotopy theories and model categories},
   pages = {73--126},
@@ -15,6 +27,32 @@
   owner = {Jason Gross},
   timestamp = {2012.03.28},
   url = {http://hopf.math.purdue.edu/Dwyer-Spalinski/theories.pdf}
+}
+
+@BOOK{hatcher2005algebraic,
+  title = {Algebraic topology},
+  publisher = {Cambridge University Press},
+  year = {2002},
+  author = {Allen Hatcher},
+  month = {December},
+  file = {Algebraic Topology:D\:\\Documents\\Dropbox\\MIT\\2011-2012\\18.904 - Seminar in Topology\\Quillen Model Structures\\Algebraic Topology by Hatcher.pdf:PDF},
+  isbn = {978-0521795401},
+  owner = {Jason Gross},
+  timestamp = {2012.04.01},
+  url = {http://www.math.cornell.edu/~hatcher/AT/AT.pdf}
+}
+
+@MISC{wiki:InitialAndTerminalObjects,
+  author = {{Wikipedia, the free encyclopedia}},
+  title = {Initial and terminal objects},
+  howpublished = {\url{http://en.wikipedia.org/wiki/Initial_and_terminal_objects}},
+  month = {March},
+  year = {2012},
+  day = {12},
+  organization = {Wikipedia, the free encyclopedia},
+  owner = {Jason Gross},
+  timestamp = {2012.04.01},
+  url = {http://en.wikipedia.org/wiki/Initial_and_terminal_objects}
 }
 
 @MISC{sets_maps_limits_colimits,
