--- a/quillen_model_structures.bib
+++ b/quillen_model_structures.bib
@@ -42,6 +42,30 @@
   url = {http://www.math.cornell.edu/~hatcher/AT/AT.pdf}
 }
 
+@ARTICLE{quillen1969rational,
+  author = {Daniel Quillen},
+  title = {Rational homotopy theory},
+  journal = {The Annals of Mathematics},
+  year = {1969},
+  volume = {90},
+  pages = {205--295},
+  number = {2},
+  owner = {Jason Gross},
+  publisher = {JSTOR},
+  timestamp = {2012.04.02},
+  url = {http://www.jstor.org/stable/10.2307/1970725}
+}
+
+@BOOK{quillen1967homotopical,
+  title = {Homotopical algebra},
+  publisher = {Springer-Verlag},
+  year = {1967},
+  author = {Daniel Quillen},
+  isbn = {978-3540039143},
+  owner = {Jason Gross},
+  timestamp = {2012.04.02}
+}
+
 @MISC{wiki:InitialAndTerminalObjects,
   author = {{Wikipedia, the free encyclopedia}},
   title = {Initial and terminal objects},
