Wrote final draft

--- a/quillen_model_structures.bib
+++ b/quillen_model_structures.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.6.
+% This file was created with JabRef 2.8b2.
 % Encoding: Cp1252
 
 @MISC{commutative_algebra,
@@ -27,6 +27,27 @@
   owner = {Jason Gross},
   timestamp = {2012.03.28},
   url = {http://hopf.math.purdue.edu/Dwyer-Spalinski/theories.pdf}
+}
+
+@ARTICLE{fox1945topologies,
+  author = {Fox, R. H.},
+  title = {On topologies for function spaces},
+  journal = {Bulletin (New Series) of the American Mathematical Society},
+  year = {1945},
+  volume = {51},
+  pages = {429--432},
+  number = {6, Part 1},
+  doi = {10.1090/S0002-9904-1945-08370-0},
+  file = {Published version:fox1945topologies.pdf:PDF},
+  fjournal = {Bulletin of the American Mathematical Society},
+  mrclass = {56.0X},
+  mrnumber = {0012224 (6,278d)},
+  mrreviewer = {H. Samelson},
+  owner = {Jason Gross},
+  pii = {S 0002-9904(1945)08370-0},
+  publisher = {American Mathematical Society},
+  timestamp = {2012.05.08},
+  url = {http://www.ams.org/journals/bull/1945-51-06/S0002-9904-1945-08370-0/S0002-9904-1945-08370-0.pdf}
 }
 
 @BOOK{hatcher2005algebraic,
@@ -64,6 +85,19 @@
   isbn = {978-3540039143},
   owner = {Jason Gross},
   timestamp = {2012.04.02}
+}
+
+@MISC{wiki:CompactOpenTopology,
+  author = {{Wikipedia, the free encyclopedia}},
+  title = {Compact-open topology},
+  howpublished = {\url{http://en.wikipedia.org/wiki/Compact-open_topology}},
+  month = {April},
+  year = {2012},
+  day = {12},
+  organization = {Wikipedia, the free encyclopedia},
+  owner = {Jason Gross},
+  timestamp = {2012.05.08},
+  url = {http://en.wikipedia.org/wiki/Compact-open_topology}
 }
 
 @MISC{wiki:InitialAndTerminalObjects,
